objects/ASI_CRM_Methodology_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Default__c</fullName>
        <formula>ASI_CRM_Methodology__r.ASI_CRM_Default__c</formula>
        <label>Default for All Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Key_Principle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Principle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Methodology_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>HQ/Hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Methodology__c</fullName>
        <label>Methodology</label>
        <referenceTo>ASI_CRM_Methodology__c</referenceTo>
        <relationshipLabel>Methodology Assignment</relationshipLabel>
        <relationshipName>ASI_CRM_Methodology_Assignment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Region__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Region</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Methodology Assignment</relationshipLabel>
        <relationshipName>Methodology_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <formula>TEXT(ASI_CRM_Methodology__r.ASI_CRM_Type__c)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Methodology Assignment</label>
    <nameField>
        <displayFormat>{YY}{000}</displayFormat>
        <label>Methodology Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Methodology Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>